--- a/web/static/css/powerpets.css
+++ b/web/static/css/powerpets.css
@@ -20,18 +20,18 @@
     --danger: #dc3545;
     --light: #f8f9fa;
     --dark: #343a40;
-    --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 body {
     background: #f3f6fd;
-    font-family: "Segoe UI Emoji";
+    /*font-family: var(--font-family-sans-serif);*/
 }
 
 a {
     transition-duration: 0.4s;
-    font-size:28px;
+    font-size: 28px;
     color: #007BFF;
     text-decoration: none
 }
@@ -160,15 +160,15 @@ a:hover {
     border-radius: 23px;
 }
 
-#projectContent{
-    margin-top:40px;
+#projectContent {
+    margin-top: 40px;
     margin-left: 50px;
 }
 
-#petContent{
-    margin-top:40px;
+#petContent {
+    margin-top: 40px;
     margin-left: 50px;
-    font-size:25px;
+    font-size: 25px;
 }
 
 
@@ -482,7 +482,7 @@ a:hover {
     border-radius: 30px;
 }
 
-.display-table{
+.display-table {
     border: 1px solid #dee2e6;
     display: table;
     border-collapse: separate;
@@ -494,17 +494,17 @@ a:hover {
     color: #212529;
 }
 
-.accountContent{
-    margin-top:40px;
-    margin-left:50px;
+.accountContent {
+    margin-top: 40px;
+    margin-left: 50px;
 }
 
-.cartContent{
-    margin-top:40px;
-    margin-left:50px;
+.cartContent {
+    margin-top: 40px;
+    margin-left: 50px;
 }
 
-.checkoutContent{
-    margin-top:40px;
-    margin-left:50px;
+.checkoutContent {
+    margin-top: 40px;
+    margin-left: 50px;
 }
