Kwanho => 1.完成了拓展2，现在可以使用浮窗，以持久化的模板来填写收货信息    2.修改了订单和账户相关的诸多UI    3.更正了一些不规范用法

--- a/web/static/css/loginStyle.css
+++ b/web/static/css/loginStyle.css
@@ -24,3 +24,12 @@ body {
 .form-signin .form-control {
     padding: 10px;
 }
+
+.about-in-index {
+    max-width: 380px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 30px 40px 50px;
+    border: 1px solid #e5e5e5;
+    border-radius: 10px;
+}
