--- a/web/static/css/pet-mask.css
+++ b/web/static/css/pet-mask.css
@@ -1,8 +1,8 @@
-/** {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    list-style: none*/
-/*}*/
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none
+}
 
 .mask {
     z-index: 1;
@@ -14,18 +14,7 @@
     left: 0;
 }
 
-
-.mask-save {
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.2);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-.prompt_box-save {
+.prompt_box {
     width: 400px;
     height: 200px;
     background: #ffffff;
@@ -33,19 +22,6 @@
     position: fixed;
     top: 25%;
     left: 50%;
-    margin-left: -200px;
-    overflow: hidden;
-}
-
-
-.prompt_box {
-    width: 700px;
-    height: 550px;
-    background: #ffffff;
-    border-radius: 6px;
-    position: fixed;
-    top: 20%;
-    left: 40%;
     margin-left: -200px;
     overflow: hidden;
 }
